# hr-fleet

./: .design  .docs  .env.example  .env.production  .gitignore  .gitmodules  .mise.toml  .npmrc  .planning  CLAUDE.md  DEVELOPER.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  bunfig.toml  gsd-requirements.md  package.json  planning  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.agents/: skills
.claude/: agents  commands  get-shit-done  gsd-file-manifest.json  settings.json
.cursor/: settings.json
.docs/: AGENT_SETUP.md  DESIGN_SYSTEM.md  FIGMA_MAKE_MAPPING.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md
.husky/: pre-commit
.husky_bak/: commit-msg
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: Dockerfile  go.mod  go.sum
blog/: README.md  astro.config.ts  eslint.config.js
deploy/: Caddyfile  Caddyfile.prod  Dockerfile.odoo  odoo-init.sh  odoo.conf  podman-compose.monitoring.yml  podman-compose.override.yml  podman-compose.prod.yml  podman-compose.yml
docs/: LAUNCH-CHECKLIST.md  README.md  RUNBOOK.md  SECURITY.md  astro.config.mjs  package.json  replace_commands.py
fleet_vehicle_calendar_year/: README.rst
fleet_vehicle_category/: README.rst
fleet_vehicle_configuration/: README.rst
fleet_vehicle_fuel_capacity/: README.rst
fleet_vehicle_fuel_type_ethanol/: README.rst
fleet_vehicle_history_date_end/: README.rst
fleet_vehicle_inspection/: README.rst  __manifest__.py
fleet_vehicle_log_fuel/: README.rst  __manifest__.py
fleet_vehicle_ownership/: README.rst  __manifest__.py
fleet_vehicle_purchase/: README.rst  __manifest__.py
fleet_vehicle_service_activity/: README.rst
fleet_vehicle_service_kanban/: README.rst
fleet_vehicle_service_services/: README.rst
fleet_vehicle_stock/: README.rst  __manifest__.py
scripts/: check-broken-links.sh  dev-apps.sh  dev.sh  git-submodule-sync.sh  kill-ports.sh  sync-upstream.sh
setup/_metapackage/: pyproject.toml
www/: .env.example  (+8 more)
(+2072 files in other folders)
